--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -42,5 +42,7 @@ models:
       +materialized: view
     mart:
       +materialized: table
+      finance:
+        +schema: finance
     staging: 
       +materialized: view
